# LD-GPU_Matching

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build_script.sh  cmake_install.cmake  generate_sample.py  generate_test_graph.py  generate_test_undirected_graph.py  ld_gpu_matching  mycielskian_10.txt  mycielskian_5.txt  performance_test.sh  queen_10.txt  run_analysis.py  test_matchings_answer.py
include/: graph.cuh  ld_gpu.cuh
scripts/: synthetic_graph_generator.py
src/: graph.cu  ld_gpu.cu  main.cu
